--- a/scanner.yml
+++ b/scanner.yml
@@ -1,2 +1,5 @@
-loadable:
+url:
+  https://github.com/buckler-project/sample-scanner/releases/download/0.1/libsample.so
+
+path:
   bin/libsample.so
